Fix history card logo size on mobile Add stickiness to history card header

--- a/src/app/history/history.component.scss
+++ b/src/app/history/history.component.scss
@@ -20,8 +20,20 @@ $datesWidth: 36px;
   margin-left: $datesWidth;
 }
 
+.mat-card {
+  padding: 0;
+  background-color: #fff;
+}
+
 .mat-card-header {
   align-items: center;
+  background-color: #fff;
+  border-radius: 8px;
+  padding: 16px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+
   .mat-card-title {
     margin-bottom: 0;
   }
@@ -44,4 +56,10 @@ mat-card-subtitle.mat-card-subtitle,
 
 .dates {
   font-weight: 200;
+}
+
+.mat-card-content {
+  background: linear-gradient(to bottom, #fff, #f5f5f5);
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 }
